[package]
name = "wall-street-wolf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apca = "0.26.2"
chrono = "0.4.26"
dotenv = "0.15.0"
futures = "0.3.28"
itertools = "0.10.5"
lazy_static = "1.4.0"
reqwest = "0.11.18"
scraper = "0.16.0"
tokio = { version = "1.27.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
