[package]
name = "wall-street-wolf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apca = "0.28.0"
chrono = "0.4.26"
dotenv = "0.15.0"
futures = "0.3.28"
itertools = "0.12.0"
lazy_static = "1.4.0"
reqwest = "0.11.18"
scraper = "0.18.0"
tokio = { version = "1.27.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
num-decimal = {version = "0.2.4", default-features = false, features = ["num-v04"]}
http-endpoint = "0.5"
serde_json = "1.0"
thiserror = "1.0"
serde_urlencoded = "0.7"
serde = { version = "1.0", features = ["derive"] }
# version 0.2 on purpose
http = {version = "0.2", default-features = false}
ta = "0.5"
dashmap = "5.5.3"
async-trait = "0.1.75"
